# ngbla

./: CMakeLists.txt  CMakeSettings.json  README.md  ngbla.patch  update.sh
core/: CMakeLists.txt  exception.cpp  exception.hpp  localheap.hpp.gch  ngcore_api.hpp  version.cpp
examples/: CMakeLists.txt  demo_LU.cpp  demo_QR.cpp  demo_simd.cpp  matvec.cpp  submatvec.cpp  time_ngbla_matmult.cpp  time_simple_matmult.cpp
ngbla/: CMakeLists.txt  bla.hpp  generate_mat_kernels.cpp  householder.cpp  ngblas.cpp  ngstd.hpp  svd.cpp
